# Second-Brain

./: .env.example  .gitignore  DEPLOY.md  Install Second Brain.cmd  LICENSE  NOTICE.md  README.md  SECURITY.md  Second-Brain.cmd  docs_v1.0.md  pyproject.toml  run.ps1
.github/workflows/: ci.yml
docs/: deploy-cloudflare.md  deploy-tailscale.md
scripts/: autostart.ps1  connect.ps1  gui.ps1  heal.ps1  install-server-task.ps1  manage.ps1  run-hidden.vbs  setup.ps1  stop.ps1  tailscale.ps1  uninstall.ps1  watchdog.ps1
src/obsidian_vault_mcp/: config.py  frontmatter_index.py
src/second_brain_ext/: __init__.py  benchmark.py  chat.py  entry.py  eval_search.py  extension.py  note.py  ranking.py  sections.py  tags.py  templates.py  writing.py
tests/: test_extension_write_audit.py  test_folders_and_graph.py  test_frontmatter_preservation.py  test_get_note_section.py  test_note_robustness.py  test_oauth.py  test_pillar1.py  test_pillar2.py  test_pillar3.py  test_pillar4.py  test_search_eval.py  test_second_brain_ext.py
tests/bench_vault/: _claude-tags.md
tests/bench_vault/Archives/: old-blog-idea.md
tests/bench_vault/Areas/: fitness.md
tests/bench_vault/Areas/Historic Figures/: napoleon.md
tests/bench_vault/Clippings/: creatine-and-the-brain.md  learning-languages.md
tests/bench_vault/Projects/: second-brain-mcp.md  vpp-pitch-deck.md
tests/bench_vault/Resources/Books/: 48-laws-of-power.md
tests/sb_sample_vault/: _index.md
tests/sb_sample_vault/Clippings/: creatine-and-the-brain.md
tests/sb_sample_vault/Projects/: launch-app.md
(+1 files in other folders)
